# PIOLT-PM

./: .env.example  .gitignore  README.md  mongodbExample.py  pyproject.toml  reset_report_test.py  test_hex.py
app/: config.py  dependencies.py  main.py  middleware.py
app/api/v1/: auth.py  blockers.py  health.py  reports.py  review.py  sprint.py  standup.py  voice.py  voice_tools.py
app/db/: indexes.py  mongo.py
app/integrations/: calendar_service.py  github_service.py  gmail_service.py  hex_service.py  monday_service.py  slack_service.py
app/jobs/: blocker_job.py  context_job.py  report_job.py  scheduler.py  standup_job.py
app/lib/: cost.py  guardrails.py  llm.py  logging_config.py  prompts.py  retry.py
app/models/: blocker.py  report.py  sprint.py
app/repositories/: base.py  blocker_repo.py  report_repo.py  sprint_repo.py  standup_repo.py  transcript_repo.py
app/services/: auth_service.py  blocker_service.py  context_builder.py  report_service.py  review_service.py  sprint_service.py  standup_service.py  voice_service.py
docs/: AI_ARCHITECTURE.md  APP_FLOW.md  BACKEND_STRUCTURE.md  IMPLEMENTATION_PLAN.md  PRD.md
frontend/: .env.local.example  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: cursor-particles.tsx  feature-sections.tsx  frame-scroll-animation.tsx  navbar.tsx  sidebar.tsx  video-hero.tsx
frontend/lib/: api.ts  auth.ts
frontend/scripts/: copy-frames.js  copy-frames.sh  extract-frames.js  extract-frames.py
scripts/: seed_demo_data.py  test_workflows.py
(+15 files in other folders)
